syntax = "proto2";

package foundation;

import "foundation/proto/geometry.proto";

message EntityCollection {
  optional string id = 1;
  repeated string entity_ids = 2;
}

message Entity {
  optional string id = 1;
  repeated string children_ids = 2;
  oneof type_specific {
    Word word = 3;
    FillerString filler_string = 4;
    SubWord sub_word = 5;
    Page page = 6;
    Text text = 7;
  }
}

message Word {
  optional BBox bbox = 1;
  optional string text = 2;
}

message FillerString { optional string text = 1; }

message SubWord {
  optional string word_id = 1;
  optional uint32 start_index = 2;
  optional uint32 end_index = 3;
}

message Page {
  optional BBox bbox = 1;
  optional string image_path = 2;
}

message Text {
  optional double likeness_score = 1;
  oneof type_specific {
    Date date = 2;
    CurrencyAmount currency_amount = 3;
    PersonName person_name = 4;
    Address address = 5;
  }
}

message Date {
  optional uint32 year = 1;
  optional uint32 month = 2;
  optional uint32 day = 3;
}

message CurrencyAmount {
  // ISO 4217 Currency codes
  enum Currency { USD = 840; }
  optional Currency currency = 1;
  optional int64 amount = 2; // amounts are always in ISO 4217 minor amounts
}

message PersonName {}

message Address {}